Use latest Python to suppress a Cask warning on GH actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
           - '27.1'
 
     steps:
+    - uses: actions/setup-python@v2
     - uses: purcell/setup-emacs@master
       with:
         version: ${{ matrix.emacs_version }}
